--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loopback4-starter",
+  "name": "admin",
   "version": "1.0.1",
   "description": "A boilerplate starter code base for setting up a loopback4 API for a multi-tenant application",
   "keywords": [
@@ -25,8 +25,8 @@
     "test": "lb-mocha --allow-console-logs \"dist/__tests__\"",
     "posttest": "npm run lint",
     "test:dev": "lb-mocha --allow-console-logs dist/__tests__/**/*.js && npm run posttest",
-    "docker:build": "docker build -t loopback4-starter .",
-    "docker:run": "docker run -p 3000:3000 -d loopback4-starter",
+    "docker:build": "docker build -t admin .",
+    "docker:run": "docker run -p 3000:3000 -d admin",
     "migrate": "node ./dist/migrate",
     "prestart": "npm run build",
     "start": "node .",
