--- a/package.json
+++ b/package.json
@@ -31,9 +31,9 @@
     "prestart": "npm run build",
     "start": "node .",
     "prepublishOnly": "npm run test",
-    "db:migrate": "./node_modules/db-migrate/bin/db-migrate up --config './migrations/database.json'",
-    "db:migrate:down": "./node_modules/db-migrate/bin/db-migrate down --config './migrations/database.json'",
-    "db:migrate:reset": "./node_modules/db-migrate/bin/db-migrate reset --config './migrations/database.json'"
+    "db:migrate": "db-migrate up --config './migrations/database.json'",
+    "db:migrate:down": "db-migrate down --config './migrations/database.json'",
+    "db:migrate:reset": "db-migrate reset --config './migrations/database.json'"
   },
   "repository": {
     "type": "git"
