--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 DB_HOST=localhost
 DB_PORT=5432
 DB_USER=postgres
-DB_PASSWORD=Sunrise@2015
+DB_PASSWORD=XXXXXXX
 DB_DATABASE=admin
 DB_SCHEMA=admin
 REDIS_HOST=localhost
