--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+
 # Logs
 logs
 *.log
@@ -61,6 +62,7 @@ typings/
 api-docs/
 
 # Transpiled JavaScript files from Typescript
+/dist
 
 *.tsbuildinfo
 
