--- a/package.json
+++ b/package.json
@@ -69,7 +69,9 @@
     "loopback-connector-postgresql": "^3.7.0",
     "loopback4-authentication": "^2.1.1",
     "loopback4-authorization": "^2.3.2",
-    "loopback4-soft-delete": "^1.2.0"
+    "loopback4-soft-delete": "^1.2.0",
+    "nexmo": "^2.5.1",
+    "util": "^0.12.1"
   },
   "devDependencies": {
     "@loopback/build": "^2.0.3",
